app/src/test/resources/autoexpect/syntax/parse/ParserTest/fail/default_on_self.cz.expected.txt
error: expected `,`, found `=`
  --> default_on_self.cz:1:11
1 | fn f(self = 42) {}
              ~
